argocd/templates/argocd-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-service
  namespace: argocd
spec:
  hosts:
    - argocd.local
  gateways:
    - argocd/argocd-gateway 
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
